<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Inscription à une formation"
        app:titleTextColor="#FFFFFF"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-4dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/nom"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/telephone"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adress"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/adress"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text" />

    <Spinner
        android:id="@+id/ville"
        android:layout_width="389dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:entries="@array/villes" />

    <Spinner
        android:id="@+id/dispo"
        android:layout_width="389dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:entries="@array/dispos"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/inscriss"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:text="inscription" />

</LinearLayout>